--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "repository": "git@github.com:ygkn/multivariate-analysis.git",
   "author": "Yugo Yagita <2000ygkn0713@gmail.com>",
   "license": "UNLICENSED",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {}
 }
